# TA

./: .coverage  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  combined_indicators.csv  config.py  index.html  main.py  mkdocs.yml  optimize_signal.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  signal_generator.py  spy_data.csv  technical_indicator.py  trading_signals.csv  visualizer.py
.github/: SECURITY.md  settings.yml
.github/workflows/: daily_analysis.yml  docs.yml  format.yml  python-app.yml  release.yml  security.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/__init__/: index.html
api/settings/: index.html
api/signal_generator/: index.html
api/technical_indicator/: index.html
api/update_spy/: index.html
api/visualizer/: index.html
assets/: signals.csv
data/: __init__.py  spy_data.csv
data/processed/: combined_indicators.csv  trading_signals.csv  trading_summary.csv
data/raw/: __init__.py  spy.csv  spy.py  spy_data.csv
developer_guide/: index.html
docs/: CHANGELOG.md  CONTRIBUTING.md  developer_guide.md  index.md  user_guide.md
docs/api/: signal_generator.md  technical_indicator.md  visualizer.md
output/: individual_signal_performances.csv  optimal_combination_performance.csv  signals.csv
site/: 404.html  index.html  objects.inv
src/: __init__.py  config.py  main.py  settings.py  signal_generator.py  technical_indicator.py  update_spy.py  visualizer.py
tests/: conftest.py  test_signal_generator.py  test_technical_indicator.py  test_visualizer.py
user_guide/: index.html
(+9 files in other folders)
