[project]
name = "ta"
version = "0.1.0"
description = ""
authors = [
    {name = "choiinyeol",email = "chldlsel@khu.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=0.2.54,<0.3.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "mkdocstrings (>=0.29.0,<0.30.0)",
    "mkdocstrings-python (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

